--- a/index.html
+++ b/index.html
@@ -19,23 +19,31 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="lp-version" content="v6.23.11"> -->
 
-    <!---stylesheet links-->
-    <link rel="stylesheet" href="css/main.css"/>
-    <link rel="stylesheet" href="css/pages_css/c_contact.css"/>
-    <link rel="stylesheet" href="css/font_css/fontawesome.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-
-
-
-    <!---favicon-->
-    <link rel="icon" type="image/x-icon" href="pictures/testing picture/faviLogo.jpg">
-
-    
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
     <script src="//code.jivosite.com/widget/2umIxmovzj" async></script>
+
+
+    <style>
+
+        body {
+            border: 2px solid none;
+            background-image: url("technical-support-system-calibration-software-configuration-settings-adjustments-professional-computer-maintenance-service-technician-oc.jpg");
+            background-repeat: no-repeat;
+        }
+
+        .c_maintenance_service_notice {
+            background-color: #e6ecff;
+            filter: drop-shadow(.1em .1em .1em);
+            width: 40%;
+            float: right;
+            margin-right: 4%;
+            margin-top: 3%;
+            padding: 4%;
+            color: #4d4ff9;
+            font-family: monospace;
+            font-size: smaller;
+        }
+    </style>
 
     
 </head>
@@ -44,12 +52,13 @@
 <body>
 
 
-This site is under maintenance. Please check back jan 2023 to access this site. Thank you for your patience
-<div>
+    <div class="c_maintenance_service_notice">
 
-			<img style="height: 100vh;" src="pictures/testing picture/maintenance.png"/>
+        <script>
+            document.write(`<h2 class="c_script_maintenance_service_notice">Please be aware that we are performing routine maintenance on (Timob Health International Website) to (date/time). This is necessary for performance and also (any other reasons). As a result, the systems/functions will be unavailable during this time.</h2>`);
+        </script>
 
-</div>
+    </div>
 
 
 </body>
